--- a/assets/style.css
+++ b/assets/style.css
@@ -18,7 +18,7 @@ body {
     opacity: 0.8;
 }
 
-.panel-panel-danger{
+.panel-panel-danger {
     color: rgba(234, 192, 37, 0.68);
 }
 
@@ -28,7 +28,7 @@ body {
 
 .panel {
     background-color: #3d4041;
-    color:rgba(234, 192, 37, 0.68);
+    color: rgba(234, 192, 37, 0.68);
 }
 
 #footer {
@@ -43,7 +43,7 @@ body {
     height: 400px;
     width: 100%;
     margin-top: 25px;
-   }
+}
 
 .panel-body2 {
     padding: 10px;
@@ -53,10 +53,12 @@ th {
     padding-right: 195px;
 }
 
-
 /* module */
+
 /* Full-width input fields */
-input[type=text], input[type=password] {
+
+input[type=text],
+input[type=password] {
     width: 100%;
     padding: 12px 20px;
     margin: 8px 0;
@@ -66,6 +68,7 @@ input[type=text], input[type=password] {
 }
 
 /* Set a style for all buttons */
+
 button {
     background-color: rgb(74, 163, 236);
     color: white;
@@ -81,6 +84,7 @@ button:hover {
 }
 
 /* Extra styles for the cancel button */
+
 .cancelbtn {
     width: 50%;
     padding: 10px 18px;
@@ -88,12 +92,12 @@ button:hover {
 }
 
 /* Center the image and position the close button */
+
 .imgcontainer {
     text-align: center;
     margin: 24px 0 12px 0;
     position: relative;
 }
-
 
 .container1 {
     padding: 16px;
@@ -105,29 +109,42 @@ span.psw {
 }
 
 /* The Modal (background) */
+
 .modal {
-    display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
-    z-index: 1; /* Sit on top */
+    display: none;
+    /* Hidden by default */
+    position: fixed;
+    /* Stay in place */
+    z-index: 1;
+    /* Sit on top */
     left: 0;
     top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
-    background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    width: 100%;
+    /* Full width */
+    height: 100%;
+    /* Full height */
+    overflow: auto;
+    /* Enable scroll if needed */
+    background-color: rgb(0, 0, 0);
+    /* Fallback color */
+    background-color: rgba(0, 0, 0, 0.4);
+    /* Black w/ opacity */
     padding-top: 60px;
 }
 
 /* Modal Content/Box */
+
 .modal-content {
     background-color: #fefefe;
-    margin: 5% auto 15% auto; /* 5% from the top, 15% from the bottom and centered */
+    margin: 5% auto 15% auto;
+    /* 5% from the top, 15% from the bottom and centered */
     border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    width: 80%;
+    /* Could be more or less, depending on screen size */
 }
 
 /* The Close Button (x) */
+
 .close {
     position: absolute;
     right: 25px;
@@ -144,39 +161,49 @@ span.psw {
 }
 
 /* Add Zoom Animation */
+
 .animate {
     -webkit-animation: animatezoom 0.6s;
     animation: animatezoom 0.6s
 }
 
 @-webkit-keyframes animatezoom {
-    from {-webkit-transform: scale(0)} 
-    to {-webkit-transform: scale(1)}
+    from {
+        -webkit-transform: scale(0)
+    }
+    to {
+        -webkit-transform: scale(1)
+    }
 }
-    
+
 @keyframes animatezoom {
-    from {transform: scale(0)} 
-    to {transform: scale(1)}
+    from {
+        transform: scale(0)
+    }
+    to {
+        transform: scale(1)
+    }
 }
 
 /* Change styles for span and cancel button on extra small screens */
+
 @media screen and (max-width: 300px) {
     span.psw {
-       display: block;
-       float: none;
+        display: block;
+        float: none;
     }
     .cancelbtn {
-       width: 50%;
+        width: 50%;
     }
 }
 
 @media screen and (max-width: 1200px) {
     span.psw {
-       display: block;
-       float: none;
+        display: block;
+        float: none;
     }
     .cancelbtn {
-       width: 50%;
+        width: 50%;
     }
 }
 
@@ -194,14 +221,12 @@ span.psw {
     color: rgba(234, 192, 37, 0.68)
 }
 
-#beer-section{
+#beer-section {
     max-height: 300px;
-    overflow-y:scroll;
-    
- }
+    overflow-y: scroll;
+}
 
- #beer-section2{
+#beer-section2 {
     max-height: 300px;
-    overflow-y:scroll;
-    
- }
+    overflow-y: scroll;
+}
